--- a/app/build.gradle
+++ b/app/build.gradle
@@ -211,6 +211,9 @@ dependencies {
     implementation "androidx.multidex:multidex:$multidex_version"
 
 
+    implementation 'com.github.duanhong169:colorpicker:1.1.6'
+
+
 }
 
 
