--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
-
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <queries>
         <package android:name="com.whatsapp" />
         <package android:name="com.facebook.katana" />
@@ -36,7 +36,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity
+            android:name=".ui.activities.EditPoliticalProfileDetailsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activities.PoliticalProfileDetailsEditActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activities.MyBusinessCategoryActivity"
             android:exported="false">
@@ -44,7 +49,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".ui.activities.BusinessSubCatActivity"
             android:exported="false"
@@ -133,8 +137,7 @@
             android:name=".custom.poster.activity.ThumbnailActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            />
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".custom.poster.activity.BaseActivity"
             android:screenOrientation="portrait"
