--- a/app/build.gradle
+++ b/app/build.gradle
@@ -214,6 +214,9 @@ dependencies {
     implementation 'com.github.duanhong169:colorpicker:1.1.6'
 
 
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+
+
 }
 
 
