--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
 
     buildTypes {
@@ -82,6 +83,7 @@ dependencies {
     // implementation 'androidx.compose.ui:ui-text:1.4.0'
     implementation project(path: ':animvideo')
     implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -215,6 +217,9 @@ dependencies {
 
 
     implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+
+    implementation 'com.github.lau1944:Zoom-Drag-Rotate-ImageView:1.0.0'
+
 
 
 }
