--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdk 33
+    compileSdk 34
     defaultConfig {
         applicationId "com.sanskruti.volotek"
         minSdk 24
@@ -84,6 +84,8 @@ dependencies {
     implementation project(path: ':animvideo')
     implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.navigation:navigation-fragment:2.7.7'
+    implementation 'androidx.navigation:navigation-ui:2.7.7'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
