--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.activities.CategoryPostActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.EditPersonalProfileDetailsActivity"
             android:exported="false" />
         <activity
